--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,9 @@
 <div class="container-md">
-    <ul>
+    <ul class="no-bullets">
         {{#each posts as | post | }}
 
-
-
         <li class="mt-2">
+            <a class="list-item" href="/{{id}}">
             <div class="card">
                 <div class="card-body">
                     {{title}}
@@ -17,6 +16,7 @@
                     </div>
                 </div>
             </div>
+            </a>
         </li>
         {{/each}}
     </ul>
