--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -27,9 +27,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Dashboard</a>
-                    <a class="nav-link" href="/login">Login</a>
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    {{#if logged_in}}
+                    <a class="nav-link" href="dashboard">Dashboard</a>
+                    <a class="nav-link" href="/auth/logout">Logout</a>
+            
+                    {{else}}
+                    <a class="nav-link" href="/auth/login">Login</a>
+                    {{/if}}
+
+
                 </div>
             </div>
         </div>
