--- a/views/partials/comments.hbs
+++ b/views/partials/comments.hbs
@@ -1,16 +1,12 @@
 <li class="mt-2 col-md-8">
-    <div class="card">
-        <div class="card-body">
-
-            <div class="">
-                <div>{{comment}}</div>
-                <div class="">{{post.User.firstname}}
-                    {{post.User.lastname}}
-                </div>
-
-                <div class="">{{created}}</div>
-
-            </div>
-        </div>
-    </div>
+<div class="card">
+                        <div class="card-body">
+                          
+                            <div class="">
+                                <div class="">{{comment}}</div>
+                                <div class="">{{User.firstname}} {{User.lastname}}</div>
+                                <div class="">{{created}}</div>
+                            </div>
+                        </div>
+                    </div>
 </li>
