--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,16 +1,21 @@
+
+    
 <div class="container-md">
-   <form action="/auth/register" method="post">
-      <label for="firstname-login">First name</label>
-      <input type="text" name="firstname" id="firstname" />
+    <div class="row col-md-6">
+    <form action="/api/user/register" class="form-group" method="post">
+         <label for="firstname-login" class="form-label">First name</label>
+        <input type="text" name="firstname" id="firstname" class="form-control"/>
 
-      <label for="lastname-login">Last name</label>
-      <input type="text" name="lastname" id="lastname" />
+           <label for="lastname-login" class="form-label">Last name</label>
+        <input type="text" name="lastname" id="lastname" class="form-control"/>
 
-      <label for="email-login">Email:</label>
-      <input type="email" name="email" id="email" />
+         <label for="email-login" class="form-label">Email:</label>
+        <input type="text" name="email" id="email" class="form-control"/>
 
-      <label for="password-login">Password:</label>
-      <input type="text" name="password" id="password" />
-      <button type="submit">Submit</button>
-   </form>
+         <label for="password-login" class="form-label">Password:</label>
+        <input type="text" name="password" id="password" class="form-control"/>
+
+        <button type="submit">Submit</button>
+    </form>
+    </div>
 </div>
